[gd_scene load_steps=9 format=2]

[ext_resource path="res://UI/Journal/Journal.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/9pr_big.png" type="Texture" id=2]
[ext_resource path="res://UI/Journal/Index.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/Journal/JournalEntry.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/ui/journal/arrow.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/journal/arrow_return.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 960, 540 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 320, 384 )

[node name="Journal" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Dim" type="ColorRect" parent="."]
margin_top = -2.58469
margin_right = 1920.0
margin_bottom = 1077.42
mouse_filter = 2
color = Color( 0, 0, 0, 0.784314 )

[node name="CloseArea" type="Area2D" parent="." groups=[
"MouseAreas",
]]
input_pickable = false
monitoring = false
monitorable = false
collision_layer = 1024

[node name="Collision" type="CollisionShape2D" parent="CloseArea"]
visible = false
position = Vector2( 960, 540 )
shape = SubResource( 1 )

[node name="Area" type="Area2D" parent="." groups=[
"MouseAreas",
]]
position = Vector2( 640, 170 )
input_pickable = false
monitoring = false
monitorable = false
collision_layer = 2048

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area"]
position = Vector2( 320, 384 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = 640.0
margin_top = 170.0
margin_right = 1280.0
margin_bottom = 938.0
texture = ExtResource( 2 )
patch_margin_left = 49
patch_margin_top = 49
patch_margin_right = 49
patch_margin_bottom = 49
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="Pages" type="Control" parent="."]
margin_left = 672.0
margin_top = 202.0
margin_right = 672.0
margin_bottom = 202.0
mouse_filter = 2

[node name="Index" parent="Pages" instance=ExtResource( 3 )]
visible = false

[node name="AStrangeGarden" parent="Pages" instance=ExtResource( 4 )]
editor/display_folded = true
visible = false

[node name="TheApprenticeship" parent="Pages" instance=ExtResource( 4 )]
editor/display_folded = true
visible = false

[node name="Title" parent="Pages/TheApprenticeship" index="0"]
text = "The Apprenticeship"

[node name="Label" parent="Pages/TheApprenticeship" index="1"]
text = "Today marks the first day I was supposed to start as an apprentice for the esteemed magical botanist Ardon Silvera.
I arrived yesterday and I have yet to see any signs of them.
I've found a couple of torn out pages of what seems to be their journal. Maybe they will be happy that I found them.
Until then, this garden looks a bit run down, maybe I should get to work."

[node name="Signature" parent="Pages/TheApprenticeship" index="2"]
text = "~ [name]"

[node name="TheCauldron1" parent="Pages" instance=ExtResource( 4 )]
editor/display_folded = true
visible = false

[node name="Title" parent="Pages/TheCauldron1" index="0"]
text = "The cauldron #1"

[node name="Label" parent="Pages/TheCauldron1" index="1"]
text = ""

[node name="TheCauldron2" parent="Pages" instance=ExtResource( 4 )]
editor/display_folded = true
visible = false

[node name="Title" parent="Pages/TheCauldron2" index="0"]
text = "The cauldron #2"

[node name="Label" parent="Pages/TheCauldron2" index="1"]
text = ""

[node name="TheCauldron3" parent="Pages" instance=ExtResource( 4 )]
editor/display_folded = true
visible = false

[node name="Title" parent="Pages/TheCauldron3" index="0"]
text = "The cauldron #3"

[node name="Label" parent="Pages/TheCauldron3" index="1"]
text = ""

[node name="Forward" type="TextureRect" parent="."]
visible = false
margin_left = 1184.93
margin_top = 847.277
margin_right = 1248.93
margin_bottom = 911.277
mouse_filter = 2
texture = ExtResource( 5 )

[node name="Area" type="Area2D" parent="Forward" groups=[
"MouseAreas",
]]
input_pickable = false
monitoring = false
monitorable = false
collision_layer = 4096

[node name="Collision" type="CollisionPolygon2D" parent="Forward/Area"]
polygon = PoolVector2Array( -1.93201, -7.8855, 15.917, -7.8855, 76.2417, 28.2642, 16.3688, 66.4473, -2.38379, 65.5436, -3.96533, 47.0168, 13.8835, 30.9754, -4.41724, 12.4487 )

[node name="Back" type="TextureRect" parent="."]
visible = false
margin_left = 739.065
margin_top = 842.108
margin_right = 803.065
margin_bottom = 906.108
rect_scale = Vector2( -1, 1 )
mouse_filter = 2
size_flags_horizontal = 0
texture = ExtResource( 5 )

[node name="Area" type="Area2D" parent="Back" groups=[
"MouseAreas",
]]
position = Vector2( -445.863, 5.16943 )
rotation = -3.14159
scale = Vector2( 1, -1 )
input_pickable = false
monitoring = false
monitorable = false
collision_layer = 4096

[node name="Collision" type="CollisionPolygon2D" parent="Back/Area"]
polygon = PoolVector2Array( -459.163, -9.49072, -513.559, 19.5048, -513.443, 29.8272, -458.351, 58.5908, -446.869, 58.9388, -446.869, 43.5131, -467.398, 25.1879, -446.057, 4.65906, -446.521, -9.37476 )

[node name="Return" type="TextureRect" parent="."]
visible = false
margin_left = 1009.87
margin_top = 842.811
margin_right = 1105.87
margin_bottom = 906.811
rect_scale = Vector2( -1, 1 )
mouse_filter = 2
texture = ExtResource( 6 )

[node name="Area" type="Area2D" parent="Return" groups=[
"MouseAreas",
]]
input_pickable = false
monitoring = false
monitorable = false
collision_layer = 4096

[node name="Collision" type="CollisionPolygon2D" parent="Return/Area"]
polygon = PoolVector2Array( 116.401, 31.6959, 79.8354, -7.02057, 59.0432, -7.37909, 59.4017, 4.80945, -13.0125, 3.73401, -12.654, 52.8466, 60.8356, 53.2051, 61.5526, 65.0351, 82.3448, 66.4691 )

[editable path="Pages/AStrangeGarden"]

[editable path="Pages/TheApprenticeship"]

[editable path="Pages/TheCauldron1"]

[editable path="Pages/TheCauldron2"]

[editable path="Pages/TheCauldron3"]
